--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -12,6 +12,7 @@
 
     <script>
         function calculateCharges() {
+            document.getElementById("chargesBreakUp").hidden = true;
             var units = document.getElementById("unitsConsumed").value;
             var utilityUrl = "energyCharges?unitsConsumed=" + units
             $.ajax({
@@ -19,6 +20,8 @@
             }).then(function(data) {
                 var table = document.getElementById("estimatedCharges");
                 table.rows[1].cells[1].innerHTML = data.totalEnergyCharges;
+                var breakUpTable = document.getElementById("chargesBreakUp");
+                breakUpTable.hidden = false;
                 //alert(data.totalEnergyCharges);
 
             });
@@ -71,7 +74,7 @@
                 <table class="table table-bordered" id="estimatedCharges">
                     <thead>
                         <tr>
-                            <th scope="col" colspan="2" style="text-align:center"><strong>Estimated Charges</strong></th>
+                            <th scope="col" colspan="2" style="text-align:center"><strong>Estimated Charges Overview</strong></th>
                         </tr>
                     </thead>
                     <tbody>
@@ -95,10 +98,67 @@
                     </tbody>
                 </table>
             </div>
-        </section>
-        <!-- </div> -->
+            <br> <br> <br>
+            <div id="breakUp">
+                <table class="table table-bordered" id="chargesBreakUp" hidden>
+                    <tr>
+                        <th scope="col" colspan="7" style="text-align:center"><strong>Estimated Charges Breakup</strong></th>
+                    </tr>
+                    <tr>
+                        <th rowspan=2>Sr. No</th>
+                        <th rowspan=2>Slab</th>
+                        <th colspan=2>Enery Charges </th>
+                        <th rowspan=2>FCA Charges</th>
+                        <th colspan=2>Duty Charges</th>
+                    </tr>
+                    <tr>
+                        <th>Rate</th>
+                        <th>Charges</th>
+                        <th>Rate</th>
+                        <th>Charges</th>
+                    </tr>
+                    <tr>
+                        <td>1</td>
+                        <td>Upto 50</td>
+                        <td>4.05</td>
+                        <td>&nbsp;</td>
+                        <td>&nbsp;</td>
+                        <td>&nbsp;</td>
+                        <td>&nbsp;</td>
+                    </tr>
+                    <tr>
+                        <td>2</td>
+                        <td>51 to 150</td>
+                        <td>4.95</td>
+                        <td>&nbsp;</td>
+                        <td>&nbsp;</td>
+                        <td>&nbsp;</td>
+                        <td>&nbsp;</td>
+                    </tr>
+                    <tr>
+                        <td>3</td>
+                        <td>151 to 300</td>
+                        <td>6.3</td>
+                        <td>&nbsp;</td>
+                        <td>&nbsp;</td>
+                        <td>&nbsp;</td>
+                        <td>&nbsp;</td>
+                    </tr>
+                    <tr>
+                        <td>4</td>
+                        <td>Above 300</td>
+                        <td>6.5</td>
+                        <td>&nbsp;</td>
+                        <td>&nbsp;</td>
+                        <td>&nbsp;</td>
+                        <td>&nbsp;</td>
+                    </tr>
+                </table>
 
-    </div>
+            </div>
+        </section>
+
+
 </body>
 
 </html>
