Fixing the background color property

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -56,7 +56,7 @@
                         <div class="form-group">
                             <label class="col-md-4 control-label" for="unitsConsumed">Enter Units</label>
                             <div class="col-md-4">
-                                <input id="unitsConsumed" name="unitsConsumed" type="number" placeholder="" class="form-control input-md" required/>
+                                <input id="unitsConsumed" name="unitsConsumed" type="number" placeholder="" class="form-control input-md" required />
                             </div>
 
                             <br>
@@ -74,7 +74,8 @@
                 <table class="table table-bordered" id="estimatedCharges">
                     <thead>
                         <tr>
-                            <th scope="col" colspan="2" style="text-align:center"><strong>Estimated Charges Overview</strong></th>
+                            <th scope="col" colspan="2" style="text-align:center"><strong>Estimated Charges
+                                    Overview</strong></th>
                         </tr>
                     </thead>
                     <tbody>
@@ -91,7 +92,7 @@
                             <td></td>
                         </tr>
                         <tr>
-                            <th scope="row" bgcolor="#FFA07A">Total Charges</th>
+                            <th scope="row" style="background-color:#FFA07A;">Total Charges</th>
                             <td></td>
                         </tr>
 
@@ -102,7 +103,8 @@
             <div id="breakUp">
                 <table class="table table-bordered" id="chargesBreakUp" hidden>
                     <tr>
-                        <th scope="col" colspan="7" style="text-align:center"><strong>Estimated Charges Breakup</strong></th>
+                        <th scope="col" colspan="7" style="text-align:center"><strong>Estimated Charges Breakup</strong>
+                        </th>
                     </tr>
                     <tr>
                         <th rowspan=2>Sr. No</th>
