--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -3,176 +3,229 @@
 
 <head>
 
-    <!-- Required meta tags -->
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+<!-- Required meta tags -->
+<meta charset="utf-8">
+<meta name="viewport"
+	content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-    <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+<!-- Bootstrap CSS -->
+<link rel="stylesheet"
+	href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
+	integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh"
+	crossorigin="anonymous">
 
-    <script>
-        function calculateCharges() {
-            document.getElementById("chargesBreakUp").hidden = true;
-            var units = document.getElementById("unitsConsumed").value;
-            var utilityUrl = "energyCharges?unitsConsumed=" + units
-            $.ajax({
-                url: utilityUrl
-            }).then(function(data) {
-                var table = document.getElementById("estimatedCharges");
-                table.rows[1].cells[1].innerHTML = data.totalEnergyCharges;
-                var breakUpTable = document.getElementById("chargesBreakUp");
-                breakUpTable.hidden = false;
-                breakUpTable.rows[3].cells[3].innerHTML = data.firstSlabCharges;
-                breakUpTable.rows[4].cells[3].innerHTML = data.secondSlabCharges;
-                breakUpTable.rows[5].cells[3].innerHTML = data.thirdSlabCharges;
-                breakUpTable.rows[6].cells[3].innerHTML = data.lastSlabCharges;
-                breakUpTable.rows[7].cells[1].innerHTML = data.totalEnergyCharges;
-                //alert(data.totalEnergyCharges);
+<script>
+	function calculateCharges() {
+		document.getElementById("chargesBreakUp").hidden = true;
+		var units = document.getElementById("unitsConsumed").value;
+		var utilityUrl = "energyCharges?unitsConsumed=" + units
+		$.ajax({
+			url : utilityUrl
+		}).then(function(data) {
+			var table = document.getElementById("estimatedCharges");
+			table.rows[1].cells[1].innerHTML = data.totalEnergyCharges;
+			var breakUpTable = document.getElementById("chargesBreakUp");
+			breakUpTable.hidden = false;
+			breakUpTable.rows[3].cells[3].innerHTML = data.firstSlabCharges;
+			breakUpTable.rows[4].cells[3].innerHTML = data.secondSlabCharges;
+			breakUpTable.rows[5].cells[3].innerHTML = data.thirdSlabCharges;
+			breakUpTable.rows[6].cells[3].innerHTML = data.lastSlabCharges;
+			breakUpTable.rows[7].cells[1].innerHTML = data.totalEnergyCharges;
+			//alert(data.totalEnergyCharges);
 
-            });
-            return false;
-        }
-    </script>
+		});
+		return false;
+	}
+</script>
+<style>
+.display-5 {
+	color: goldenrod;
+	font-family: "Lucida Handwriting", "Cursive";
+	font-weight: 600;
+}
 
-    <title>Utility Charges App</title>
+.estimate {
+	color: mediumaquamarine;
+	font-family: "Papyrus", "Fantasy";
+	font-weight: 600;
+}
+
+body {
+	background-image: url("Utilityimage2.jpg");
+}
+
+.form-group {
+	color: ghostwhite;
+	font-family: "Gill Sans", sans-serif;
+	font-weight: 300;
+}
+
+.table table-bordered {
+	color: ghostwhite;
+	font-family: "Gill Sans", sans-serif;
+	font-weight: 300;
+}
+.tablerow{
+color: ghostwhite;
+	font-family: "Gill Sans", sans-serif;
+	font-weight: 300;
+}
+</style>
+
+<title>Utility Charges App</title>
 </head>
 
 <body>
 
 
-    <!-- Optional JavaScript -->
-    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-    <script src="https://code.jquery.com/jquery-3.2.1.js" integrity="sha256-DZAnKJ/6XZ9si04Hgrsxu/8s717jcIzLy3oi35EouyE=" crossorigin="anonymous"></script>
+	<!-- Optional JavaScript -->
+	<!-- jQuery first, then Popper.js, then Bootstrap JS -->
+	<script src="https://code.jquery.com/jquery-3.2.1.js"
+		integrity="sha256-DZAnKJ/6XZ9si04Hgrsxu/8s717jcIzLy3oi35EouyE="
+		crossorigin="anonymous"></script>
 
-    <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js" integrity="sha256-T0Vest3yCU7pafRw9r+settMBX6JkKN06dqBnpQ8d30=" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
+	<script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"
+		integrity="sha256-T0Vest3yCU7pafRw9r+settMBX6JkKN06dqBnpQ8d30="
+		crossorigin="anonymous"></script>
+	<script
+		src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
+		integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo"
+		crossorigin="anonymous"></script>
+	<script
+		src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"
+		integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6"
+		crossorigin="anonymous"></script>
 
-    <div id="main" class="container">
-        <h3 class="display-5" align="center">Utility Bill Calculator</h3>
-        <!-- <div class="row"> -->
-        <section class="col-md-12 col-sm-12">
-            <div align="center">
-                <form method="post" action="#charges" class="form-horizontal">
-                    <fieldset>
-                        <legend> Bill Estimator </legend>
+	<div id="main" class="container">
+		<h3 class="display-5" align="center">Utility Bill Calculator</h3>
+		<!-- <div class="row"> -->
+		<section class="col-md-12 col-sm-12">
+			<div align="center">
+				<form method="post" action="#charges" class="form-horizontal">
+					<fieldset>
+						<legend class="estimate"> Bill Estimator </legend>
 
-                        <!-- Text input-->
-                        <div class="form-group">
-                            <label class="col-md-4 control-label" for="unitsConsumed">Enter Units</label>
-                            <div class="col-md-4">
-                                <input id="unitsConsumed" name="unitsConsumed" type="number" placeholder="" class="form-control input-md" required />
-                            </div>
+						<!-- Text input-->
+						<div class="form-group">
+							<label class="col-md-4 control-label" for="unitsConsumed">Enter
+								Units</label>
+							<div class="col-md-4">
+								<input id="unitsConsumed" name="unitsConsumed" type="number"
+									placeholder="" class="form-control input-md" required />
+							</div>
 
-                            <br>
+							<br>
 
-                            <!-- <div class="form-group"> -->
-                            <div class="col-md-4">
-                                <input type="submit" name="submit" id="submit" value="Submit" class="btn btn-primary" onclick="calculateCharges(); return false"></input>
-                            </div>
-                        </div>
-                    </fieldset>
-                </form>
-            </div>
-            <br>
-            <div id="charges">
-                <table class="table table-bordered" id="estimatedCharges">
-                    <thead>
-                        <tr>
-                            <th scope="col" colspan="2" style="text-align:center"><strong>Estimated Charges
-                                    Overview</strong></th>
-                        </tr>
-                    </thead>
-                    <tbody>
-                        <tr>
-                            <th scope="row">Energy Charges</th>
-                            <td></td>
-                        </tr>
-                        <tr>
-                            <th scope="row">FCA Charges</th>
-                            <td></td>
-                        </tr>
-                        <tr>
-                            <th scope="row">Duty Charges</th>
-                            <td></td>
-                        </tr>
-                        <tr>
-                            <th scope="row" style="background-color:#FFA07A;">Total Charges</th>
-                            <td></td>
-                        </tr>
+							<!-- <div class="form-group"> -->
+							<div class="col-md-4">
+								<input type="submit" name="submit" id="submit" value="Submit"
+									class="btn btn-primary"
+									onclick="calculateCharges(); return false"></input>
+							</div>
+						</div>
+					</fieldset>
+				</form>
+			</div>
+			<br>
+			<div id="charges">
+				<table class="table table-bordered" id="estimatedCharges">
+					<thead>
+						<tr class="tablerow">
+							<th scope="col" colspan="2" style="text-align: center"><strong>Estimated
+									Charges Overview</strong></th>
+						</tr>
+					</thead>
+					<tbody>
+						<tr class="tablerow">
+							<th scope="row">Energy Charges</th>
+							<td></td>
+						</tr>
+						<tr class="tablerow">
+							<th scope="row">FCA Charges</th>
+							<td></td>
+						</tr>
+						<tr class="tablerow">
+							<th scope="row">Duty Charges</th>
+							<td></td>
+						</tr>
+						<tr class="tablerow">
+							<th scope="row" style="background-color: #FFA07A;">Total
+								Charges</th>
+							<td></td>
+						</tr>
 
-                    </tbody>
-                </table>
-            </div>
-            <br> <br> <br>
-            <div id="breakUp">
-                <table class="table table-bordered" id="chargesBreakUp" hidden style="text-align:center; vertical-align: middle;">
-                    <tr>
-                        <th scope="col" colspan="7" style="text-align:center"><strong>Estimated Charges Breakup</strong>
-                        </th>
-                    </tr>
-                    <tr>
-                        <th rowspan=2 style="vertical-align: middle;">Sr. No</th>
-                        <th rowspan=2 style="vertical-align: middle;">Slab</th>
-                        <th colspan=2 style="vertical-align: middle;">Energy Charges </th>
-                        <th rowspan=2 style="vertical-align: middle;">FCA Charges</th>
-                        <th colspan=2 style="vertical-align: middle;">Duty Charges</th>
-                    </tr>
-                    <tr>
-                        <th>Rate</th>
-                        <th>Charges</th>
-                        <th>Rate</th>
-                        <th>Charges</th>
-                    </tr>
-                    <tr>
-                        <td>1</td>
-                        <td>Upto 50</td>
-                        <td>4.05</td>
-                        <td>&nbsp;</td>
-                        <td>&nbsp;</td>
-                        <td>&nbsp;</td>
-                        <td>&nbsp;</td>
-                    </tr>
-                    <tr>
-                        <td>2</td>
-                        <td>51 to 150</td>
-                        <td>4.95</td>
-                        <td>&nbsp;</td>
-                        <td>&nbsp;</td>
-                        <td>&nbsp;</td>
-                        <td>&nbsp;</td>
-                    </tr>
-                    <tr>
-                        <td>3</td>
-                        <td>151 to 300</td>
-                        <td>6.3</td>
-                        <td>&nbsp;</td>
-                        <td>&nbsp;</td>
-                        <td>&nbsp;</td>
-                        <td>&nbsp;</td>
-                    </tr>
-                    <tr>
-                        <td>4</td>
-                        <td>Above 300</td>
-                        <td>6.5</td>
-                        <td>&nbsp;</td>
-                        <td>&nbsp;</td>
-                        <td>&nbsp;</td>
-                        <td>&nbsp;</td>
-                    </tr>
-                    <tr>
-                        <td colspan="3" style="text-align: center;">Total</td>
-                        <td>&nbsp;</td>
-                        <td>&nbsp;</td>
-                        <td>&nbsp;</td>
-                        <td>&nbsp;</td>
-                    </tr>
-                </table>
+					</tbody>
+				</table>
+			</div>
+			<br> <br> <br>
+			<div id="breakUp">
+				<table class="table table-bordered" id="chargesBreakUp" hidden
+					style="text-align: center; vertical-align: middle;">
+					<tr class="tablerow">
+						<th scope="col" colspan="7" style="text-align: center"><strong>Estimated
+								Charges Breakup</strong></th>
+					</tr>
+					<tr class="tablerow">
+						<th rowspan=2 style="vertical-align: middle;">Sr. No</th>
+						<th rowspan=2 style="vertical-align: middle;">Slab</th>
+						<th colspan=2 style="vertical-align: middle;">Energy Charges
+						</th>
+						<th rowspan=2 style="vertical-align: middle;">FCA Charges</th>
+						<th colspan=2 style="vertical-align: middle;">Duty Charges</th>
+					</tr>
+					<tr class="tablerow">
+						<th>Rate</th>
+						<th>Charges</th>
+						<th>Rate</th>
+						<th>Charges</th>
+					</tr>
+					<tr class="tablerow">
+						<td>1</td>
+						<td>Upto 50</td>
+						<td>4.05</td>
+						<td>&nbsp;</td>
+						<td>&nbsp;</td>
+						<td>&nbsp;</td>
+						<td>&nbsp;</td>
+					</tr>
+					<tr class="tablerow">
+						<td>2</td>
+						<td>51 to 150</td>
+						<td>4.95</td>
+						<td>&nbsp;</td>
+						<td>&nbsp;</td>
+						<td>&nbsp;</td>
+						<td>&nbsp;</td>
+					</tr>
+					<tr class="tablerow">
+						<td>3</td>
+						<td>151 to 300</td>
+						<td>6.3</td>
+						<td>&nbsp;</td>
+						<td>&nbsp;</td>
+						<td>&nbsp;</td>
+						<td>&nbsp;</td>
+					</tr>
+					<tr class="tablerow">
+						<td>4</td>
+						<td>Above 300</td>
+						<td>6.5</td>
+						<td>&nbsp;</td>
+						<td>&nbsp;</td>
+						<td>&nbsp;</td>
+						<td>&nbsp;</td>
+					</tr>
+					<tr class="tablerow">
+						<td colspan="3" style="text-align: center;">Total</td>
+						<td>&nbsp;</td>
+						<td>&nbsp;</td>
+						<td>&nbsp;</td>
+						<td>&nbsp;</td>
+					</tr>
+				</table>
 
-            </div>
-        </section>
-
-
+			</div>
+		</section>
 </body>
 
 </html>
